compilador.g4
grammar compilador;

@header{
	import src.datastructures.compiladorSymbol;
	import src.datastructures.compiladorVariable;
	import src.datastructures.compiladorSymbolTable;
	import src.exceptions.compiladorSemanticException;
	import src.ast.compiladorProgram;
	import src.ast.AbstractCommand;
	import src.ast.CommandLeitura;
	import src.ast.CommandEscrita;
	import src.ast.CommandAtribuicao;
	import src.ast.CommandDecisao;
	import src.ast.CommandTamanho;
	import src.ast.CommandEnquanto;
	import src.ast.CommandFaca;
	import java.util.ArrayList;
	import java.util.Stack;
}

@members{
	private int _tipo;
	private String _varName;
	private String _varValue;
	private compiladorSymbolTable symbolTable = new compiladorSymbolTable();
	private compiladorSymbol symbol;
	private compiladorProgram program = new compiladorProgram();
	private ArrayList<AbstractCommand> curThread;
	private Stack<ArrayList<AbstractCommand>> stack = new Stack<ArrayList<AbstractCommand>>();
	private String _readID;
	private String _writeID;
    private int _exprTam;
	private String _exprID;
	private String _exprContent;
	private String _exprDecision;
	private ArrayList<AbstractCommand> listaTrue;
	private ArrayList<AbstractCommand> listaFalse;
	private ArrayList<AbstractCommand> lista;
	
	public void verificaID(String id){
		if (!symbolTable.exists(id)){
			throw new compiladorSemanticException("Symbol "+id+" not declared");
		}
	}
	
	public void exibeComandos(){
		for (AbstractCommand c: program.getComandos()){
			System.out.println(c);
		}
	}
	
	public void generateCode(){
		program.generateTarget();
	}
}

prog	: 'inicio' decl bloco  'fim'
           {  program.setVarTable(symbolTable);
           	  program.setComandos(stack.pop());

           } 
		;
		
decl    :  (declaravar)+
        ;
        
        
declaravar :  tipo ID  {
	                  _varName = _input.LT(-1).getText();
	                  _varValue = null;
	                  symbol = new compiladorVariable(_varName, _tipo, _varValue);
	                  if (!symbolTable.exists(_varName)){
	                     symbolTable.add(symbol);	
	                  }
	                  else{
	                  	 throw new compiladorSemanticException("Symbol "+_varName+" already declared");
	                  }
                    } 
              (  VIR 
              	 ID {
	                  _varName = _input.LT(-1).getText();
	                  _varValue = null;
	                  symbol = new compiladorVariable(_varName, _tipo, _varValue);
	                  if (!symbolTable.exists(_varName)){
	                     symbolTable.add(symbol);	
	                  }
	                  else{
	                  	 throw new compiladorSemanticException("Symbol "+_varName+" already declared");
	                  }
                    }
              )* 
               SC
           ;
           
tipo       : 'numero' { _tipo = compiladorVariable.NUMBER;  }
           | 'texto'  { _tipo = compiladorVariable.TEXT;  }
           | 'booleano' { _tipo = compiladorVariable.BOOLEAN;  }
           | 'caracter' { _tipo = compiladorVariable.CHAR;  }
           | 'inteiro' { _tipo = compiladorVariable.INT;  }
           | 'numero[]' { _tipo = compiladorVariable.VECTOR;  }

           ;
        
bloco	: { curThread = new ArrayList<AbstractCommand>(); 
	        stack.push(curThread);  
          }
          (cmd)+
		;
		

cmd		:  cmdleitura  
 		|  cmdescrita 
 		|  cmdattrib
 		|  cmdselecao
		|  cmdfaca 
		|  cmdenquanto
		| cmdtamanho
		;

cmdtamanho : 'tamanho' AP
                        ID { verificaID(_input.LT(-1).getText());
                              _readID = _input.LT(-1).getText();
                            }
                         FP
                  {
                    compiladorVariable var = (compiladorVariable)symbolTable.get(_readID);
                    CommandTamanho cmd = new CommandTamanho(_readID, var);
                    stack.peek().add(cmd);
                  }
            ;


cmdleitura	: 'leia' AP
                     ID { verificaID(_input.LT(-1).getText());
                     	  _readID = _input.LT(-1).getText();
                        } 
                     FP 
                     SC 
                     
              {
              	compiladorVariable var = (compiladorVariable)symbolTable.get(_readID);
              	CommandLeitura cmd = new CommandLeitura(_readID, var);
              	stack.peek().add(cmd);
              }   
			;


cmdescrita	: 'escreva' 
                 AP 
                 ID { verificaID(_input.LT(-1).getText());
	                  _writeID = _input.LT(-1).getText();
                     } 
                 FP 
                 SC
               {
               	  CommandEscrita cmd = new CommandEscrita(_writeID);
               	  stack.peek().add(cmd);
               }
               |('escreva'
                                                 AP{ curThread = new ArrayList<AbstractCommand>();
                                                                         stack.push(curThread);
                                                                       }
                                                 cmdtamanho

                                                 {
                                                                        listaTrue = stack.pop();
                                                                     }
                                                 FP
                                                 SC{
                                                                      		CommandEscrita cmd = new CommandEscrita(listaTrue);
                                                                      		stack.peek().add(cmd);
                                                                      	}
                                               )
			;
			
cmdattrib	:  ID { verificaID(_input.LT(-1).getText());
                    _exprID = _input.LT(-1).getText();
                   } 
               ATTR { _exprContent = ""; } 
               expr 
               SC
               {
               	 	CommandAtribuicao cmd = new CommandAtribuicao(_exprID, _exprContent, _exprTam);
               	 	stack.peek().add(cmd);
               }
			;
			
			
cmdselecao  :  'se' AP
                    ID    { _exprDecision = _input.LT(-1).getText(); }
                    OPREL { _exprDecision += _input.LT(-1).getText(); }
                    (ID | NUMBER) {_exprDecision += _input.LT(-1).getText(); }
                    FP 
                    ACH 
                    { curThread = new ArrayList<AbstractCommand>(); 
                      stack.push(curThread);
                    }
                    (cmd)+ 
                    
                    FCH 
                    {
                       listaTrue = stack.pop();	
                    } 
                   ('senao' 
                   	 ACH
                   	 {
                   	 	curThread = new ArrayList<AbstractCommand>();
                   	 	stack.push(curThread);
                   	 } 
                   	(cmd+) 
                   	FCH
                   	{
                   		listaFalse = stack.pop();
                   		CommandDecisao cmd = new CommandDecisao(_exprDecision, listaTrue, listaFalse);
                   		stack.peek().add(cmd);
                   	}
                   )?
            ;
			
cmdfaca :  'faca' ACH
                    { curThread = new ArrayList<AbstractCommand>(); 
                      stack.push(curThread);
                    }
                    (cmd)+ 

                    FCH

                    'enquanto'
                    AP
                    ID    { _exprDecision = _input.LT(-1).getText(); }
                    OPREL { _exprDecision += _input.LT(-1).getText(); }
                    (ID | NUMBER) {_exprDecision += _input.LT(-1).getText(); }
                    FP 
                    SC
                    {
                       lista = stack.pop();
					   CommandFaca cmd = new CommandFaca(_exprDecision, lista);
                   	   stack.peek().add(cmd);
                    } 
            ;

cmdenquanto :  'enquanto' AP
                    ID    { _exprDecision = _input.LT(-1).getText(); }
                    OPREL { _exprDecision += _input.LT(-1).getText(); }
                    (ID | NUMBER) {_exprDecision += _input.LT(-1).getText(); }
                    FP 
                    ACH 
                    { curThread = new ArrayList<AbstractCommand>(); 
                      stack.push(curThread);
                    }
                    (cmd)+ 
                    
                    FCH 
                    {
                       lista = stack.pop();
					   CommandEnquanto cmd = new CommandEnquanto(_exprDecision, lista);
                   	   stack.peek().add(cmd);
                    } 
            ;
			
expr		:  termo ( 
	             OP  { _exprContent += _input.LT(-1).getText();
                        _exprTam = -1;
	             }
	            termo
	            )*
			;
			
termo		: ID { verificaID(_input.LT(-1).getText());
	               _exprContent += _input.LT(-1).getText();
                    _exprTam = -1;

                 } 
            | 
              NUMBER
              {
              	_exprContent += _input.LT(-1).getText();
                _exprTam = -1;
              }
            | 
              TEXT
              {
              	_exprContent += _input.LT(-1).getText();
                _exprTam = -1;
              }
            |VECTOR {
                _exprContent += _input.LT(-1).getText();
                _exprTam = 1;
            }
            ;
			
	
AP	: '('
	;
	
FP	: ')'
	;
	
SC	: ';'
	;
	
OP	: '+' | '-' | '*' | '/'
	;
	
ATTR : '='
	 ;
	 
VIR  : ','
     ;
     
ACH  : '{'
     ;
     
FCH  : '}'
     ;
	 
	 
OPREL : '>' | '<' | '>=' | '<=' | '==' | '!='
      ;
      
ID	: [a-z] ([a-z] | [A-Z] | [0-9])*
	;
	
NUMBER	: [0-9]+ ('.' [0-9]+)?
		;

TEXT	: ('"')('a'..'z' | 'A'..'Z' | '0'..'9' | ' ' | ',' | ':' | '?' | '!')* ('"')
		;

VECTOR :'{'[0-9]+ (',' [0-9]+)*'}';

		
WS	: (' ' | '\t' | '\n' | '\r') -> skip;
